# seestar_alp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  Bruno_notes  Current ConformU Protocol.txt  Current ConformU Validation.txt  LICENSE-PyIndi.txt  LICENSE-Seestar_Alp.txt  LICENSE.txt  README-AlpacaDevice.md  README.md  Raspberry Pi Install.md  Seestar Alpaca API.json  alpaca-device.mustache  calibration.py  calibration_api.py  change_log.txt  dev_autoreload.sh  pyproject.toml  requirements.txt  requirements_full_overload.txt  root_app.py  seestar_alp.spec  ssc_win_bld.ps1  step_tracker.py  telescope.py  version.txt
.claude/: CLAUDE.md
.github/: FUNDING.yml
cli/: README.md  pyproject.toml
cli/ssalp_api_client/: __init__.py  client.py  config.py  exceptions.py
cli/ssalp_api_client/cli/: main.py  output.py
cli/ssalp_api_client/commands/: camera.py  files.py  filter_wheel.py  focuser.py  info.py  mount.py  schedule.py  system.py
cli/tests/: conftest.py  test_bru_parser.py  test_ssalp_cli.py  test_ssalp_client.py  test_ssalp_commands.py  test_ssalp_config.py
cli/tools/: bru_parser.py
data/: mpn-01.txt
device/: abstract_device.py  abstract_imager.py  actions.py  alpaca_client.py  app.py  astap_tool.py  auto_level.py  config.py  config.toml  config.toml.example  config.toml.orig  discovery.py  event_callbacks.py  exceptions.py  live_tracker.py  live_tracker_service.py  log.py  management.py  nighttime_calibration.py  plant_limits.json  plant_limits.py  plant_models.py  reference_provider.py  rotation_calibration.py  rotator.py  rotatordevice.py  rtspclient.py  seestar_device.py  seestar_federation.py  seestar_imaging.py  seestar_logs.py  seestar_remote.py  seestar_remote_imaging.py  seestar_util.py  setup.py  shr.py  streaming_controller.py  stretch.py  sun_safety.py  target_frame.py  (+6 more)
doc/: LINTING.md  RELEASE_PROCESS.md
docker/: Dockerfile  Dockerfile.riscv64  README.md  config.toml.example  entrypoint.sh  entrypointALPACA.sh  entrypointINDI.sh  run.sh  util.sh
front/: README.md  ROADMAP.md  app.py  csc_sites.json  package-lock.json  package.json  planning.json  vitest.config.js
front_v2/: app.py  device_client.py
imaging/: snr.py  stretch.py
indi/: seestar.py  start_indi_devices.py
lib/: __init__.py  coordinates.py  telescope_devices.py  trace.py
lint/: lint.sh  pylintrc
mac/: setup.sh
(+464 files in other folders)
