[project]
name = "seestar-alp-upstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpyca==2.0.4",
    "astropy==6.0.0",
    "astroquery==0.4.8.dev9321",
    "blinker==1.8.2",
    "ephem==4.1.5",
    "falcon==3.1.3",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "geocoder==1.38.1",
    "geomag==0.9.2015",
    "humanize==4.10.0",
    "jinja2==3.1.4",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pydantic>=2.11.3",
    "pydash==8.0.3",
    "pyhocon==0.3.61",
    "pyindi",
    "pytz==2022.7.1",
    "pyyaml~=6.0.1",
    "requests~=2.32.3",
    "ruff==0.11.6",
    "scikit-image==0.24.0",
    "scipy~=1.14.0",
    "sdnotify==0.3.2",
    "skyfield==1.49",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "tzlocal==5.2",
    "waitress==3.0.0",
    "watchdog==5.0.2",
]

[tool.uv.sources]
pyindi = { git = "https://github.com/MMTObservatory/pyINDI.git", rev = "c12590fbe310c34cadb03713051789a4d76d80c7" }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E722",  # Do not use bare `except`
    "F541",  # f-string without any placeholders
    "F405",  # may be undefined, or defined from star imports
    "F403",  # * used; unable to detect undefined names
]
exclude = [
    "templates/*",
    "scripts/*",
    "indi/*",
    "device/rotator.py",
]

[tool.ruff.format]
exclude = [
    "templates/*",
    "scripts/*",
    "indi/*"
]